pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-rewrite-target.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-rewrite-target
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
    - host: rewrite-target.localhost
      http:
        paths:
          - path: /something(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: whoami
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-rewrite-target-no-regex
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""

spec:
  ingressClassName: nginx
  rules:
    - host: rewrite-target-no-regex.localhost
      http:
        paths:
          - path: /something
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
